shopping-cart/deployment/redis.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  labels:
    app: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
      role: master
      tier: backend
  template:
    metadata:
      labels:
        app: redis-cache
        role: master
        tier: backend
    spec:
      containers:
      - name: redis-cache
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
