shopping-cart/deployment/shoppingcart.gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: online-store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: online-store
spec:
  hosts:
  - "*"
  gateways:
  - online-store-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/shopping-cart
    rewrite:
      uri: /api/v1
    route:
    - destination:
        host: "nols-shopping-cart-ms"
        # subset: v1
        port:
          number: 5000
# ---        
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: shopping-cart-destination
# spec:
#   host: "*"
#   subsets:
#   - name: v1
#     labels:
#       version: v1
